fix: Update title and description for Moiré Superlattice site

--- a/web/apps/website/content/index.mdx
+++ b/web/apps/website/content/index.mdx
@@ -1,11 +1,9 @@
 ---
-title: Moiré Superlattice Lab
+title: Moiré Superlattice
 ---
 
-# Moiré Superlattice Lab
+# Moiré Superlattice
 
-This site currently hosts the **Band Coverage Viewer** write-up. To jump straight to it:
+This site currently only hosts the **Band Coverage Viewer**. To jump straight to it:
 
 - [Research → Band Library Viewer](/research/band_library_viewer)
-
-More sections will return as they are refreshed.
