Blaze implementation and next website updates

--- a/web/apps/website/content/research/band_library_viewer.mdx
+++ b/web/apps/website/content/research/band_library_viewer.mdx
@@ -1,5 +1,8 @@
 # Photonic Band Diagrams
 
 import { BandCoverageViewer } from '../../src/components/band-coverage/BandCoverageViewer';
+import { NarrowContent } from '../../src/components/NarrowContent';
 
-<BandCoverageViewer />
+<NarrowContent widthPercent={70}>
+  <BandCoverageViewer />
+</NarrowContent>
