Added RegistryShiftCanvas and TwoAtomicBasisCanvas components for lattice visualization
- Implemented RegistryShiftCanvas for visualizing registry shifts in a 2-atom basis.
- Created TwoAtomicBasisCanvas to display the local bilayer structure with layer 1 and layer 2 atoms.
- Introduced lattice-utils module for common lattice geometry calculations, including basis vector generation, rotation, and registry shift computation.

--- a/python-example/lattice_visualization.ipynb
+++ b/python-example/lattice_visualization.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea768798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def get_inverse_basis(a1, a2):\n",
+    "    det = a1[0] * a2[1] - a1[1] * a2[0]\n",
+    "    return np.array([[a2[1], -a2[0]], [-a1[1], a1[0]]]) / det\n",
+    "\n",
+    "# Example Hex Basis\n",
+    "a = 1.0\n",
+    "theta = np.radians(1.0)\n",
+    "moire_length = a / (2 * np.sin(theta/2))\n",
+    "# Moiré basis is rotated by theta/2 relative to x-axis? \n",
+    "# No, usually aligned differently. Let's check the code.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "04c5c4f0",
    "metadata": {},
